# lf-compression

./: Coordinate.py  huffmanTable.py  idct.py  jpeg_decoder.py  main.py  stream.py
decoder-c/: CMakeLists.txt  a.out  huffmanTable.cpp  huffmanTable.h  jpeg_decoder.cpp  jpeg_decoder.h  linkedList.cpp  main.cpp  stream.cpp  stream.h
decoder-c-v2/: Makefile  README.md  decoder.cpp  jpg.h
jpeg-decoder-python/: README.md  huffmanTable.py  idct.py  jpeg_decoder.py  main.py  stream.py
